상품 이름에 들어갈 수 있는 특수문자 추가, 상품 상세 조회에서 상품과 연결된 카테고리 응답으로 추가, 카테고리 이름 유니크 키 해제, 카테고리 이름과 부모 카테고리 복합 유니크 키 설정, 카테고리 번호 유니크 키로 추가